# Proyecto_Horarios_automatizacion

./: CMakeLists.txt  DOCUMENTACION_FINAL.md  INTEGRACION_WINAPI.md  Makefile  README.md  compile_web.sh  main.cpp  run.sh
data/: ESPIS-cursos-2017.csv  dataex.csv  ejemplo_grupos.csv  h1.csv  h2.csv
data/input/: ESPIS-cursos-2017.csv
data/output/: n.csv
include/: CargaDatos.h  Curso.h  Curso.hpp  Exportador.h  Filtros.h  GeneradorHorarios.h  GrafoHorario.h  Grupo.hpp  Hora.hpp  Horario.h  Horario.hpp  HorarioCurso.h  Sistema.hpp  Validacion.h  Visualizacion.h
include/PSGraph/: Grafo.hpp  Grafo_impl.hpp
src/: CargaDatos.cpp  Curso.cpp  Curso.hpp  Exportador.cpp  Filtros.cpp  GeneradorHorarios.cpp  GrafoHorario.cpp  Grupo.hpp  Hora.hpp  Horario.cpp  Horario.hpp  InterfazWeb.cpp  Sistema.cpp  Validacion.cpp  Visualizacion.cpp  main.cpp
sys-horario/: INSTRUCCIONES.md  run_tests.sh  test_integration.sh
sys-horario/data/: h1.csv
sys-horario/include/: Grupo.hpp  Horario.hpp  InterfazWeb.hpp  InterfazWinAPI.hpp
sys-horario/src/: InterfazWinAPI.cpp  Sistema.cpp
sys-horario/tests/: test_grafo.cpp
sys-horario/web/: index.html  script_fixed.js  winapi_bridge.js
sys-horario/win32-app/: Makefile  Makefile.console  Makefile.winapi  README.md  build.sh  build_windows.sh  common.h  curso_data.h  curso_manager.cpp  dialog.cpp  main_winapi.cpp  (+3 more)
tests/: etest_grafo.ps1  test.ps1  test_grafo.cpp
web/: app.js  script.js  styles.css  winapi_interface.html
win32-app/: build_winapi.sh  console_version.cpp  curso_manager.h  curso_manager_console  main.cpp  resource.rc
(+4 files in other folders)
